--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
  <button id="mode">Change Mode</button> 
+ <p>Welcome to my website!</p>
  <script src="script.js"></script>  
  </body>
 </html>
